# fchat

./: .gitignore
fchat/: CMakeLists.txt  click_label.cpp  click_label.h  config.ini  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  reset_dialog.cpp  reset_dialog.h  resetdialog.ui  resources.qrc  singleton.h  timer_button.cpp  timer_button.h
fchat/style/: stylesheet.qss
server/: .clang-format  .clanlgd  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  xmake.lua
server/src/: CMakeLists.txt  config.ini  config_manager.cpp  config_manager.h  const.h  cserver.cpp  cserver.h  gate_server.cpp  http_connection.cpp  http_connection.h  io_context_pool.cpp  io_context_pool.h  logic_system.cpp  logic_system.h  main.cpp  message.proto  mysql_dao.cpp  mysql_dao.h  mysql_manager.cpp  mysql_manager.h  mysql_pool.cpp  mysql_pool.h  redis_manager.cpp  redis_manager.h  singleton.h  status_grpc_client.cpp  status_grpc_client.h  status_server.cpp  status_server_impl.cpp  status_server_impl.h  verify_client.cpp  verify_client.h  verify_grpc_client.cpp  verify_grpc_client.h  verify_server.h  win32_lean_mean.h
verify_server/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
